
-More USD (and other fiat) markets for Bitcoin / Altcoins

-Code cleanup / optimizations / bug fixes / semantics

-All charts now have 24 hour volume as pairing volume (for normal UX feel charts)

-Added debugging log (when debugging is enabled in config.php) to log runtime telemetry

-API support for btcmarkets.net, bitpanda.com, lakebtc.com, tidebit.com, huobi.pro, cex.io

-Throttling of limited APIs (to help avoid ip blacklisting by exchanges requiring a separate call for each coin)

-Consolidated multiple function calls into variables where possible, for less moving parts / increased runtime speed

-New Bitcoin fiat (or stablecoin) trading pairs: USDT / TUSD / USDC / GBP / EUR / CAD / AUD / SGD / HKD / GBP / EUR / CHF / JPY / RUB

-Dynamically changeable primary fiat currency globally (charts / alerts / token value / subtotal / total / tools / calculators), 
based off the chosen Bitcoin market pairing (charts / alerts default fiat currency is ONLY changeable in configuration file).

IMPORTANT NOTE: v4.00.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.

-------------------------------------------------------------------



-------------------------------------------------------------------
4.01.0:

-Added dynamic modularity to MISCASSETS

-Added all 13 fiat pairings (to already-existing 4 crypto pairings) within MISCASSETS as pairing options (to see what the equivalent trade / holdings value in the paired currency would be)

-UX revisions

IMPORTANT NOTE: v4.00.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.

-------------------------------------------------------------------






























































